--- a/public/components/directives/NewPost/NewPostTemplate.html
+++ b/public/components/directives/NewPost/NewPostTemplate.html
@@ -7,41 +7,31 @@
     <img class="ui avatar image" src="css/img/justFishBlackLogo.png" alt=""/>
     New Post
     <br><br>
-    <div class="ui form">
+    <div class="ui form" >
 <div class="grouped fields">
 <label>What kind of Post is this?</label>
 <div class="field">
   <div class="ui radio checkbox">
-    <input type="radio" name="frequency" checked="checked">
+    <input type="radio" name="frequency" checked="checked" ng-model="newPost.typeOfPost" value="report">
     <label>Fishing Report</label>
   </div>
 </div>
 <div class="field">
   <div class="ui radio checkbox">
-    <input type="radio" name="frequency">
+    <input type="radio" name="frequency" ng-model="newPost.typeOfPost" value="bragging">
     <label>Bragging Post</label>
   </div>
 </div>
 <div class="field">
   <div class="ui radio checkbox">
-    <input type="radio" name="frequency">
+    <input type="radio" name="frequency" ng-model="newPost.typeOfPost" value="funny">
     <label>Funny</label>
   </div>
 </div>
 </div>
 </div>
   </div>
-<form class="ui large icon reply form">
-
-<div class="field">
-<textarea placeholder="Post"></textarea>
-<div class=" content">
-<div class="item"> 
-  <a class="ui large label">
-    Add Photo
-  </a>
-  <div class="ui right floated huge star rating rateThePlace" data-rating="0" data-max-rating="5" data-content="Please rate the river / lake" ></div> 
-  <select class="ui fluid multiple search medium dropdown" multiple="">
+  <select class="ui fluid multiple search medium dropdown" ng-model="newPost.waterbody" multiple="">
     <option value="">Where did you fish?</option>
     <option value="Bear Lake">
       Bear Lake</option>
@@ -85,13 +75,32 @@
       Willard Bay Reservoir</option>
 
   </select>
+<form class="ui large icon reply form">
+<div class="field">
+<textarea placeholder="Post" ng-model="newPost.postMessage"></textarea>
+<div class=" content">
+<div class="item"> 
+  <!-- <input type="file" id="fileAddPhoto"  name="addPhotoFile" style="display:none" accept="image/*" />
+  <a id="newPostaddPhotoBtn"type="file" class="ui large label">
+    Add Photo
+  </a> -->
+  <div class="two fields">
+    <div class="three wide field">
+      <div id="ratingNewPostTemplate" class="ui huge star rating rateThePlace" data-rating="0" data-max-rating="5" data-content="Please rate the place" ng-click="getRating();" ng-model="newPost.rating" value="data-rating" >
+      </div> 
+    </div>
+    <div class="thirteen wide field">
+      <input classtype="text" name="postPic" placeholder="Add photo url" ng-model="newPost.postPic">
+
+    </div>
+  </div>
   </div> 
 </form>
     </div>
 
 </div>
 <div class="actions">
-  <div class="ui button">Cancel</div>
-  <div class="ui button">OK</div>
+  <div class="ui negative button">Cancel</div>
+  <div class="ui blue button" ng-click="createNewPost()">OK</div>
 </div>
 </div>
