--- a/public/components/directives/posted/postedTemplate.html
+++ b/public/components/directives/posted/postedTemplate.html
@@ -1,24 +1,33 @@
-<div class="ui fluid card">
-  <div class="content">
-
-    <img class="ui avatar image" src="css/img/avatar.png">
-    Cleber
+<div class="ui fluid card" ng-repeat="post in posts">
+<div class="content">
+<div class="right floated meta">
+      <time am-time-ago="post.dateOfPost" title="{{ post.dateOfPost | amDateFormat: 'dddd, MMMM Do YYYY, h:mm a' }}"></time>
+  </div>
+    <img id="postedAvatarImage"class="ui avatar image" ng-src={{post.profilePic}}>
+  <a ui-sref="Profile({id:post.userId})">{{post.firstName + " " + post.lastName}}</a>
   </div>
   <div class="image">
-    <img class="ui mini image" src="css/img/fishingBuddies.jpg">
+    <img class="ui mini image" ng-src={{post.postPic}}>
   </div>
+    <div class="content">
+      {{post.postMessage}}
+    </div>
   <div class="content">
     <span class="right floated">
-      <i class="heart outline like icon"></i>
-      17 likes
+      <i class="thumbs outline up like big icon" ng-click='addLike(post._id)'></i>
+      {{post.likes.length}} likes
     </span>
-    <i class="comment icon"></i>
-    3 comments
+
+      <i class="star yellow big icon superStazona"></i>
+      {{post.rating}} stars
+    <!-- <i class="comment icon"></i>
+    {{post.comments.length}} comments -->
+    <br>
   </div>
-  <div class="extra content">
+  <!-- <div class="extra content">
     <div class="ui large transparent left icon input">
       <i class="heart outline icon"></i>
       <input type="text" placeholder="Add Comment...">
     </div>
-  </div>
+  </div> -->
 </div>
