--- a/public/components/directives/register/registerTemplate.html
+++ b/public/components/directives/register/registerTemplate.html
@@ -4,61 +4,57 @@
     <img class="ui avatar image" src="css/img/justFishBlackLogo.png" alt=""/>
     Welcome! Please register below
   </div>
-  <div class="ui container">
-    <img class="ui small image" src="css/img/wireframe.png" alt=""/>
-    <div class="ui mini icon button">
+  <!-- <div class="ui container">
+    <img class="ui small image" src={{newUser.profilePic}}/>
+    <div id="addPhotoButtonRegister" class="ui mini icon button">
       <i class="icon camera"></i>
       Choose photo
     </div>
-  </div>
+    <input type="file" id="registerAddPhoto" name="addPhotoRegister" style="display:none" accept="image/*"/>
+  </div> -->
 
-  <form class="ui medium form">
+  <form id="registerForm"class="ui medium form">
     <br><br><br>
     <div class="two fields">
       <div class="six wide required field">
         <label>First Name</label>
-        <input type="text">
+        <input type="text" name="firstName" ng-model="newUser.firstName">
       </div>
       <div class="ten wide required field">
-        <label>Last Name</label>
-        <input type="text">
+        <label>Last Name
+        </label>
+        <input type="text" name="lastName" ng-model="newUser.lastName">
       </div>
     </div>
     <br>
     <div class="two fields">
       <div class="ten wide required field">
         <label>Email</label>
-        <input type="email">
+        <input type="email" name="email" ng-model="newUser.email">
       </div>
       <div class="six wide required field">
         <label>Password</label>
-        <input type="password">
+        <input type="password" name="password" ng-model="newUser.password">
       </div>
     </div>
     <br>
     <div class="two fluid fields">
       <div class="eight wide required field">
         <label>Gender</label>
-        <div class="ui selection dropdown">
-          <input type="hidden" name="gender">
-          <i class="dropdown icon"></i>
-          <div class="menu">
-            <div class="item" data-value="1">Male</div>
-            <div class="item" data-value="0">Female</div>
-          </div>
-        </div>
-
+        <select id="genderDropdown" class="ui dropdown" name="gender" multiple="1" ng-model="newUser.gender">
+          <option value="Male">Male</option>
+          <option value="Female">Female</option>
+        </select>
       </div>
 
       <div class="eight wide required field">
         <label>Fishing styles</label>
-        <select class="ui multiple search dropdown" multiple="">
-          <option value="Fly">Fly fishing</option>
-          <option value="Spin">Spin Castin</option>
-          <option value="BaitCast">Bait Casting</option>
+        <select id="fishingStyleDropdown" class="ui multiple dropdown" name="fishingStyles" multiple="" ng-model="newUser.fishingStyle">
+          <option value="Fly fishing">Fly fishing</option>
+          <option value="Spin Casting">Spin Casting</option>
+          <option value="Bait Casting">Bait Casting</option>
           <option value="Trolling">Trolling</option>
           <option value="Tenkara">Tenkara</option>
-          <option value="Bait">Bait Casting</option>
         </select>
       </div>
     </div>
@@ -67,17 +63,58 @@
     <div class="two fields">
       <div class="eight wide required field">
         <label>City</label>
-        <input type="text">
+        <input type="text" name="city" ng-model="newUser.city">
       </div>
       <div class="eight wide required field">
         <label>Region</label>
-        <input type="text">
+        <select id="regionDropdown" class="ui dropdown" name="region" multiple="" ng-model="newUser.region">
+          <option value="">Filter by Region</option>
+          <option value="Northern">
+            Northern</option>
+          <option value="Central">
+            Central</option>
+          <option value="Northeastern">
+            Northeastern</option>
+          <option value="Southeastern">
+            Southeastern</option>
+          <option value="Southern">
+            Southern</option>
+        </select>
       </div>
     </div>
   </form>
-  <br>
+  <br><br><br>
+  <form class="ui medium form">
+    <div class="two fields">
+  <input type="text" name="profilePic" placeholder="Add Profile photo url" ng-model="newUser.profilePic">
+  <input type="text" name="coverPic" placeholder="Add Cover photo url" ng-model="newUser.coverPic">
+</div>
+</form>
   <div class="actions">
-    <div class="ui button">Cancel</div>
-    <div class="ui button">OK</div>
+    <div id="registerCancelButton" class="ui negative button" ng-click="clear();">Cancel</div>
+    <div id="registerSubmitButton" name="submitButton" class="ui close blue button" ng-click="submitIt()">OK</div>
+
+    <!-- <div id="registerSubmitButton" name="submitButton" class="ui close blue button" ng-click="createNewUser()">OK</div> -->
   </div>
+</div>
+
+<div class="ui small modal" id="registerAlertModal">
+  <div class="header">
+    <h2>Thanks for registering!</h2>
+  </div>
+  <div class="content">
+    <h3>Please log in now.</h3>
+
+  </div>
+  <div class="actions">
+   <div class="ui negative button">OK</div>
+ </div>
+</div>
+<div class="ui small modal" id="registerRequiredAlert">
+  <div class="header">
+    <h2>Please fill all required fields!</h2>
+  </div>
+  <div class="actions">
+   <div class="ui negative button">OK</div>
+ </div>
 </div>
