--- a/public/css/report.css
+++ b/public/css/report.css
@@ -1,4 +1,12 @@
 #reportPlaces{
   position: relative;
-  top: 5vh;
+  float: right;
+  top: 1vh;
+}
+/*#topTen {
+  min-width: 40vw;
+}*/
+#placeOfTheDay{
+  position: relative;
+  top: 6vh;
 }
