--- a/public/components/directives/fishOfTheDay/fishOfTheDayTemplate.html
+++ b/public/components/directives/fishOfTheDay/fishOfTheDayTemplate.html
@@ -4,10 +4,10 @@
   </div>
   <div class="content">
     <div class="right floated meta">14h</div>
-    <img id="fishOfTheDayAvatarImage"class="ui avatar image" src="css/img/avatar.png">
+    <img id="fishOfTheDayAvatarImage"class="ui avatar image" ng-src="https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xft1/v/t1.0-9/11205488_10206108480364802_3989196216496773722_n.jpg?oh=f2bfcdcd0561eab4793f89bb2d1910dd&oe=5770AFE6">
     Cleber
   </div>
   <div class="image">
-    <img class="ui mini image" src="css/img/avatar.png">
+    <img class="ui mini image" src="https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xft1/v/t1.0-9/11205488_10206108480364802_3989196216496773722_n.jpg?oh=f2bfcdcd0561eab4793f89bb2d1910dd&oe=5770AFE6">
   </div>
 </div>
