fixed other paths

--- a/public/components/home/home.html
+++ b/public/components/home/home.html
@@ -7,7 +7,7 @@
   <div class="ui stackable grid">
 
     <div class="twelve wide column" id="profileFeed">
-        <new-post-directive></new-post-directive>
+        <new-posts-directive></new-posts-directive>
         <br><br>
       <posted-directive posts="posts"></posted-directive>
       <br>
