--- a/public/components/report/report.html
+++ b/public/components/report/report.html
@@ -13,7 +13,7 @@
         <report-filter-directive filter-in-report="filterInReport" get-filter-by-place="filterByPlace({filterInReport:[filterInReport]})"></report-filter-directive>
       </div>
       <br>
-      <new-post-directive></new-post-directive>
+      <new-posts-directive></new-posts-directive>
       <br><br>
       <posted-directive posts="posts"></posted-directive>
 
