--- a/public/components/directives/posted/postedTemplate.html
+++ b/public/components/directives/posted/postedTemplate.html
@@ -1,4 +1,4 @@
-<div class="ui fluid card" ng-repeat="post in posts">
+<div class="ui fluid card" ng-repeat="post in posts track by $index">
 <div class="content">
 <div class="right floated meta">
       <time am-time-ago="post.dateOfPost" title="{{ post.dateOfPost | amDateFormat: 'dddd, MMMM Do YYYY, h:mm a' }}"></time>
@@ -14,7 +14,7 @@
     </div>
   <div class="content">
     <span class="right floated">
-      <i class="thumbs outline up like big icon" ng-click='addLike(post._id)'></i>
+      <i class="thumbs outline up like big icon" ng-click='addLike(post._id, $index)'></i>
       {{post.likes.length}} likes
     </span>
 
