fixed home video

--- a/public/components/directives/navBar/navBarTemplate.html
+++ b/public/components/directives/navBar/navBarTemplate.html
@@ -12,6 +12,8 @@
       Reports
     </a>
     <div class="right menu">
+      <!--!!!!!!!!!!!!!!!!!!!!!SEARCH BAR WILL GO HERE!!!!!!!!!!!!!!!!!!!!!  -->
+
       <!-- <div class="item">
         <div class="ui icon input">
           <input type="text" placeholder="Search...">
