--- a/public/components/directives/posted/postedTemplate.html
+++ b/public/components/directives/posted/postedTemplate.html
@@ -20,10 +20,12 @@
 
       <i class="star yellow big icon superStazona"></i>
       {{post.rating}} stars
+      <!-- COMENTS NUMBER WILL GO HERE!!!!!!!!!!!! -->
     <!-- <i class="comment icon"></i>
     {{post.comments.length}} comments -->
     <br>
   </div>
+  <!-- COMENTS WILL GO HERE!!!!!!!!!!!! -->
   <!-- <div class="extra content">
     <div class="ui large transparent left icon input">
       <i class="heart outline icon"></i>
