--- a/public/components/directives/profileCard/profileCardTemplate.html
+++ b/public/components/directives/profileCard/profileCardTemplate.html
@@ -1,6 +1,9 @@
 <div class="ui link cards">
   <div id="profileCard" class="ui fluid card">
     <div class="image">
+      <div id="changeProfilePic">
+          <a id="changeProfilePicIcon" href=""><i class="photo small inverted icon"></i></a>
+      </div>
       <img id="profilePic" ng-src={{currentUser.profilePic}}>
     </div>
     <div class="content">
