--- a/public/components/login/login.html
+++ b/public/components/login/login.html
@@ -1,11 +1,11 @@
-<video class="loginBackground" src="css/img/Relaxation.mp4" autoplay="autoplay" loop="loop" muted="true"></video>
+<div class="loginPage">
+  <video class="loginBackground" src="css/img/Relaxation.mp4" autoplay="autoplay" loop="loop" muted="true"></video>
 <div class="cortin"></div>
 <br>
 <div id="mainLogin" class="ui middle aligned center aligned grid">
 
   <div class="column" id="loginColumn">
     <h2 id="loginTitle" class="ui image header">
-      <!-- <img src="css/img/loginIcon.png" class="image"> -->
       <div class="content">
         <img id="logoImg" src="css/img/mainLogo.svg"/>
 
@@ -47,4 +47,5 @@
 
     </div>
   </div>
+</div>
 </div>
