--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,13 +1,19 @@
+.loginPage{
+position: relative;
+max-width: 100vw;
+background-color: rgba(0, 0, 0, 0.01);
+}
 .loginBackground {
   position: absolute;
-  max-height: 110%;
-  width: auto;
+  height:120%;
+  width: 100%;
+  object-fit: cover;
   z-index: 1;
 }
 .cortin {
   position: absolute;
   z-index: 2;
-  height: 110%;
+  height: 150%;
   width: 100%;
   background-color: black;
   opacity: 0.5;
@@ -22,13 +28,7 @@
       max-width: 400px;
       z-index: 5;
     }
-    /*#logoImg {
-      position: absolute;
-      top: 5vh;
-      left: 5vw;
-      width: 15vw;
-      z-index: 5;
-    }*/
+
     #loginTitle{
       color: white;
       text-shadow: black 0.3px 0.3px 0.3px;
