--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -15,16 +15,6 @@ height: 100%;
 object-fit:cover;
 z-index: 1;
 }
-/*#profilePic {
-  position: relative;
-  width: 20%;
-  left: 5%;
-  top: 25%;
-  height: auto;
-  border-radius: 50%;
-  border: 6px solid white;
-  z-index: 3;
-}*/
 #profileCard {
   position: relative;
   top: -30vh;
@@ -61,9 +51,6 @@ body {
   border: 0.2px solid lightgray;
 }
 
-/*.mainMenu {
-  max-height: 7vh;
-}*/
 #followingTitle {
   float: left;
 }
@@ -84,4 +71,41 @@ body {
   width: 4vw;
   object-fit: cover;
   border: 0.01px solid rgba(199, 199, 199, 0.72);
+}
+#changeCoverPic{
+  position:absolute;;
+  display: flex;
+  justify-content: flex-end;
+  height: 100%;
+  width: 100%;
+  z-index: 10;
+  opacity: .5;
+}
+#changeCoverPicIcon{
+  position: relative;
+  bottom: 1vh;
+  display: flex;
+  align-self: flex-end;
+}
+#changeCoverPicIcon i{
+  text-shadow: black 1px 1px 1px;
+}
+#changeProfilePic{
+  position:absolute;;
+  display: flex;
+  justify-content: flex-end;
+  height: 100%;
+  width: 100%;
+  z-index: 10;
+  opacity: .5;
+  bottom: 1vh;
+  right: 0.4vw;
+}
+#changeProfilePicIcon{
+  position: relative;
+  display: flex;
+  align-self: flex-end;
+}
+#changeProfilePicIcon i{
+  text-shadow: black 1px 1px 1px;
 }
