removed facebook button

--- a/public/components/login/login.html
+++ b/public/components/login/login.html
@@ -27,12 +27,12 @@
           </div>
         </div>
         <div id="loginButton"class="ui fluid large blue button" ng-click="login(user)">Login</div>
-        <br>
+        <!-- <br>
         or sign in with
         <br><br>
         <button class="ui facebook button">
           <i class="facebook icon"></i>
-          Facebook</button>
+          Facebook</button> -->
 
       </div>
 
