--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,6 +1,7 @@
 .loginPage{
 position: relative;
-max-width: 100vw;
+max-width: 100%;
+max-height: 100%;
 background-color: rgba(0, 0, 0, 0.01);
 }
 .loginBackground {
@@ -25,7 +26,7 @@ background-color: rgba(0, 0, 0, 0.01);
     #loginColumn {
       position: relative;
       /*top: 20vh;*/
-      max-width: 400px;
+      max-width: 350px;
       z-index: 5;
     }
 
