profile mobile optimized

--- a/public/components/directives/following/followingTemplate.html
+++ b/public/components/directives/following/followingTemplate.html
@@ -1,4 +1,4 @@
-<div class="ui center aligned segment">
+<div id="followingCard" class="ui center aligned segment">
   <div class="ui center aligned fluid card">
   <div class="content">
     <p id="followingTitle">
