--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -4,9 +4,13 @@
   justify-content: flex-start;
   align-items: center;
   width: 100%;
-  height: 40vh;
+  height: 200px;
   background: black;
   z-index: 1;
+}
+#pageBody {
+  padding-right: 100px;
+  padding-left: 100px;
 }
 #coverPic {
 position: absolute;
@@ -17,8 +21,7 @@ z-index: 1;
 }
 #profileCard {
   position: relative;
-  top: -30vh;
-  max-width: 400px;
+  top: -100px;
   z-index: 5;
 }
 #profilePic {
@@ -109,3 +112,28 @@ body {
 #changeProfilePicIcon i{
   text-shadow: black 1px 1px 1px;
 }
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2){
+    .coverPhoto {
+      display: none;
+    }
+
+    #profileCard {
+      top: 1vh;
+    }
+
+    #profileFeed {
+    top: -10px;
+    }
+    #profileFollowing {
+      top: -2vh;
+    }
+
+    #pageBody {
+      padding-right: 3px;
+      padding-left: 3px;
+    }
+
+  }
