--- a/public/components/directives/navBar/navBarTemplate.html
+++ b/public/components/directives/navBar/navBarTemplate.html
@@ -2,8 +2,7 @@
   <div class="ui inverted blue  stackable secondary menu mainMenu">
     <a class="item" ui-sref="Home">
       <img id="miniLogoImg" class="ui mini image" src="css/img/JustFishLogo.svg" alt=""/>
-      &nbsp&nbsp
-      Home
+      &nbsp&nbsp Home
     </a>
     <a class="item" ui-sref="Profile({id:currentUser._id})">
       Profile
