--- a/public/components/directives/profileCard/profileCardTemplate.html
+++ b/public/components/directives/profileCard/profileCardTemplate.html
@@ -2,7 +2,9 @@
   <div id="profileCard" class="ui fluid card">
     <div class="image">
       <div id="changeProfilePic">
-          <a id="changeProfilePicIcon" href=""><i class="photo small inverted icon"></i></a>
+        <a id="changeProfilePicIcon" href="">
+          <i class="photo small inverted icon"></i>
+        </a>
       </div>
       <img id="profilePic" ng-src={{currentUser.profilePic}}>
     </div>
@@ -15,7 +17,7 @@
     <div class="extra content">
       <span class="right floated">
         <button class="ui mini blue active button" ng-click="follow()">
-          <i class="user icon" ></i>
+          <i class="user icon"></i>
           Follow
         </button>
       </span>
