--- a/public/components/login/login.html
+++ b/public/components/login/login.html
@@ -3,12 +3,10 @@
 <div class="cortin"></div>
 <br>
 <div id="mainLogin" class="ui middle aligned center aligned grid">
-
   <div class="column" id="loginColumn">
     <h2 id="loginTitle" class="ui image header">
       <div class="content">
         <img id="logoImg" src="css/img/mainLogo.svg"/>
-
         <h6>Log-in to your account</h6>
       </div>
     </h2>
@@ -29,24 +27,21 @@
         <br>
         <div id="loginButton"class="ui fluid large blue button" ng-click="login(user)">Login</div>
         <br>
+        <!-- facebook auth will go here -->
+
         <!-- <br>
         or sign in with
         <br><br>
         <button class="ui facebook button">
           <i class="facebook icon"></i>
           Facebook</button> -->
-
       </div>
-
       <div class="ui error message"></div>
-
     </div>
-
     <div class="ui message">
       Don't have an account?
       <a id="signerUper" href="">Sign Up</a>
       <register-directive></register-directive>
-
     </div>
   </div>
 </div>
