--- a/public/components/report/report.html
+++ b/public/components/report/report.html
@@ -2,11 +2,8 @@
 <div class="coverPhoto">
   <img id="coverPic" src="css/img/FishingReports.png" alt=""/>
 </div>
-
 <div class="ui fluid container">
-<div class="four wide column">
-
-</div>
+  <div class="four wide column"></div>
   <div class="ui centered stackable grid">
     <div class="ten wide column" id="profileFeed">
       <div id="reportPlaces" class="six wide required field" ng-click="applyFilters()">
@@ -16,22 +13,19 @@
       <new-posts-directive></new-posts-directive>
       <br><br>
       <posted-directive posts="posts"></posted-directive>
-
     </div>
     <div class="four wide column" id="placeOfTheDay">
-    <div class="ui fluid card">
-      <div class="content">
-        Place of the Day
-      </div>
-      <div class="content">
-        Provo River
-      </div>
-      <div class="image">
-        <img class="ui mini image" ng-src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Upper_Provo_River_Utah.jpg">
+      <div class="ui fluid card">
+        <div class="content">
+          Place of the Day
+        </div>
+        <div class="content">
+          Provo River
+        </div>
+        <div class="image">
+          <img class="ui mini image" ng-src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Upper_Provo_River_Utah.jpg">
+        </div>
       </div>
     </div>
-        </div>
-
-
   </div>
 </div>
